fixed issue on mobile with footer overlapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,6 +31,7 @@ body{
   padding:0;
   font-family: Helvetica;
   font-family: 'EB Garamond', serif;
+  overflow: auto;
 }
 
 a{
@@ -842,15 +843,11 @@ box-shadow:0 1px 2px rgba(0,0,0,0);
 #addpoll-container{
   width:30%;
   margin:auto;
-  margin-top:1em;
   border: 1px solid rgba(255,255,255,.05);
   border-radius: 2px;
   background: rgba(215, 210, 204,.2);
 }
 
-#addpoll-container{
-  box-shadow:0 1px 2px rgba(0,0,0,.5);
-}
 
 fieldset{
   border:1px solid rgba(255,255,255,.05);
@@ -880,6 +877,7 @@ legend:hover{
   padding:2.5px 0;
   border-bottom:1px solid rgba(215, 210, 204,.1);
   box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  margin-bottom:0;
 }
 
 .form-sep p{
@@ -899,6 +897,7 @@ legend:hover{
   float:left;
   display: inline-block;
   width: 50%;
+    margin-bottom:0;
 }
 
 
@@ -1013,6 +1012,10 @@ cursor: pointer;
 
 #value-list li h3,#value-list li button{
   display: inline-block;margin:0;
+}
+
+#add-form{
+    margin:0;
 }
 
 
